<resources>
    <string name="app_name">B4B</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string-array name="Genders">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Transgender</item>
        

    </string-array>
    <string name="title_activity_explore_job_detail">ExploreJobDetail</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_explore_job_applicaton_form">ExploreJobApplicatonFormActivity
    </string>
    <string name="airtel_question1">Do you have an android phone?</string>
    <string name="airtel_question2">Do you have a Two wheeler?</string>
    <string name="airtel_question3">Do you have a driving licence?</string>
    <string name="airtel_question4">Do you have experience in Sales?</string>
    <string name="privacy_policy_first_para">At Brand4Brands, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Brand4Brands and how we use it.\nIf you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="privacy_policy_log_file_content">Brand4Brands follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="terms_and_condition_para1">Welcome to Brand4Brands!\nThese terms and conditions outline the rules and regulations for the use of Brand4Brands.\nBy using this app we assume you accept these terms and conditions. Do not continue to use Brand4Brands if you do not agree to take all of the terms and conditions stated on this page.\nThe following terminology applies to these Terms and Conditions, Privacy Statement and Disclaimer Notice and all Agreements:"Client", "You" and "Your" refers to you, the person log on this website and compliant to the Company’s terms and conditions. "The Company", "Ourselves", "We", "Our" and "Us", refers to our Company. "Party", "Parties", or "Us", refers to both the Client and ourselves. All terms refer to the offer, acceptance and consideration of payment necessary to undertake the process of our assistance to the Client in the most appropriate manner for the express purpose of meeting the Client’s needs in respect of provision of the Company’s stated services, in accordance with and subject to, prevailing law of Netherlands. Any use of the above terminology or other words in the singular, plural, capitalization and/or he/she or they, are taken as interchangeable and therefore as referring to same. Our Terms and Conditions were created with the help of the App Terms and Conditions Generator from App-Privacy-Policy.com</string>
    <string name="terms_and_condition_license_content"><![CDATA[Unless otherwise stated, Brand4Brands and/or its licensors own the intellectual property rights for all material on Brand4Brands. All intellectual property rights are reserved. You may access this from Brand4Brands for your own personal use subjected to restrictions set in these terms and conditions.\nYou must not:\n\n ❌ Republish material from Brand4Brands \n ❌ Sell, rent or sub-license material from Brand4Brands\n ❌ Reproduce, duplicate or copy material from Brand4Brands\n ❌ Redistribute content from Brand4Brands\n\nThis Agreement shall begin on the date hereof.\nParts of this app offer an opportunity for users to post and exchange opinions and information in certain areas of the website. Brand4Brands does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of Brand4Brands, its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, Brand4Brands shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.\nBrand4Brands reserves the right to monitor all Comments and to remove any Comments which can be considered inappropriate, offensive or causes breach of these Terms and Conditions.\nYou warrant and represent that:\n ➡ You are entitled to post the Comments on our App and have all necessary licenses and consents to do so;\n ➡ The Comments do not invade any intellectual property right, including without limitation copyright, patent or trademark of any third party;\n ➡ The Comments do not contain any defamatory, libelous, offensive, indecent or otherwise unlawful material which is an invasion of privacy\n ➡ The Comments will not be used to solicit or promote business or custom or present commercial activities or unlawful activity.\nYou hereby grant Brand4Brands a non-exclusive license to use, reproduce, edit and authorize others to use, reproduce and edit any of your Comments in any and all forms, formats or media.]]></string>
    <string name="terms_and_condition_hyperlinks"><![CDATA[The following organizations may link to our App without prior written approval:\n 🔗 Government agencies;\n 🔗 Search engines;\n 🔗 News organizations;\n 🔗 Online directory distributors may link to our App in the same manner as they hyperlink to the Websites of other listed businesses; \n 🔗 System wide Accredited Businesses except soliciting non-profit organizations, charity shopping malls, and charity fundraising groups which may not hyperlink to our Web site.\n \nThese organizations may link to our home page, to publications or to other App information so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products and/or services; and (c) fits within the context of the linking party’s site.\nWe may consider and approve other link requests from the following types of organizations:\n 🔗 commonly-known consumer and/or business information sources;\n 🔗 dot.com community sites;\n 🔗 associations or other groups representing charities;\n 🔗 online directory distributors;\n 🔗 internet portals;\n 🔗 accounting, law and consulting firms; and\n 🔗 educational institutions and trade associations.\n\nWe will approve link requests from these organizations if we decide that: (a) the link would not make us look unfavorably to ourselves or to our accredited businesses; (b) the organization does not have any negative records with us; (c) the benefit to us from the visibility of the hyperlink compensates the absence of Brand4Brands; and (d) the link is in the context of general resource information.\nThese organizations may link to our App so long as the link: (a) is not in any way deceptive; (b) does not falsely imply sponsorship, endorsement or approval of the linking party and its products or services; and (c) fits within the context of the linking party’s site.\nIf you are one of the organizations listed in paragraph 2 above and are interested in linking to our App, you must inform us by sending an e-mail to Brand4Brands. Please include your name, your organization name, contact information as well as the URL of your site, a list of any URLs from which you intend to link to our App, and a list of the URLs on our site to which you would like to link. Wait 2-3 weeks for a response.\nApproved organizations may hyperlink to our App as follows:\n ➡ By use of our corporate name; or\n ➡ By use of the uniform resource locator being linked to; or\n ➡ By use of any other description of our App being linked to that makes sense within the context and format of content on the linking party’s site.\n ➡ No use of Brand4Brands\'s logo or other artwork will be allowed for linking absent a trademark license agreement.]]></string>
    <string name="terms_and_condition_iframes_content">Without prior approval and written permission, you may not create frames around our Webpages that alter in any way the visual presentation or appearance of our App.</string>
    <string name="terms_and_condition_liabilities">We shall not be hold responsible for any content that appears on your App. You agree to protect and defend us against all claims that is rising on our App. No link(s) should appear on any Website that may be interpreted as libelous, obscene or criminal, or which infringes, otherwise violates, or advocates the infringement or other violation of, any third party rights.</string>
    <string name="terms_and_condition_reservation_content">We reserve the right to request that you remove all links or any particular link to our App. You approve to immediately remove all links to our App upon request. We also reserve the right to amen these terms and conditions and it’s linking policy at any time. By continuously linking to our App, you agree to be bound to and follow these linking terms and conditions.</string>
    <string name="terms_and_conditions_removal_links_content">If you find any link on our App that is offensive for any reason, you are free to contact and inform us any moment. We will consider requests to remove links but we are not obligated to or so or to respond to you directly.\n\nWe do not ensure that the information on this website is correct, we do not warrant its completeness or accuracy; nor do we promise to ensure that the website remains available or that the material on the website is kept up to date.</string>
    <string name="terms_and_condition_disclaimer"><![CDATA[To the maximum extent permitted by applicable law, we exclude all representations, warranties and conditions relating to our App and the use of this website. Nothing in this disclaimer will:\n ➡ limit or exclude our or your liability for death or personal injury;\n ➡ limit or exclude our or your liability for fraud or fraudulent misrepresentation;\n ➡ limit any of our or your liabilities in any way that is not permitted under applicable law; or\n ➡ exclude any of our or your liabilities that may not be excluded under applicable law.\nThe limitations and prohibitions of liability set in this Section and elsewhere in this disclaimer: (a) are subject to the preceding paragraph; and (b) govern all liabilities arising under the disclaimer, including liabilities arising in contract, in tort and for breach of statutory duty.\nAs long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.]]></string>
</resources>