<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".app.profile.policies.TermsAndConditionFragment">

<com.google.android.material.appbar.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar_location"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Terms and Conditions"
        app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_marginTop="10dp"
        />
</com.google.android.material.appbar.AppBarLayout>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="24dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_para1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="License"

            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_license_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hyperlinking to our App"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_hyperlinks"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="iFrames"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_iframes_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Content Liability"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_liabilities"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Privacy"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="Please read Privacy Policy."
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reservation of Rights"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_reservation_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Removal of links from our App"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_conditions_removal_links_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Disclaimer"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:text="@string/terms_and_condition_disclaimer"
            />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

